--- a/semantic.html
+++ b/semantic.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
     <link rel="stylesheet" href="css/test.css">
 </head>
 <body>
@@ -36,6 +37,7 @@
         <div> 
             <main>
                 <article>
+                     <section>
             <h1>Результаты поиска по слову "вёрстка"</h1>
             <div>
                 <h3>Вёрстка сайтов под ключ</h3>
@@ -58,6 +60,7 @@
                         Всем привет, меня зовут Анна Блок, и эта статья будет посвящена довольно «острой» теме, которая связана с позиционированием элементов. Мы поговорим о таком свойстве как position и его значениях: relative, absolute и fixed. Также мы поговорим о таком значении как static, но по большей степени нас будет интересовать именно первая «троица», так как она чаще всего используется на сайтах.
                     </p>
                     <a href="#">Читать далее</a>
+                </section>
             </article>
             </div>
         </div>
