--- a/semantic.html
+++ b/semantic.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <a href="#" class="logo">LOGO</a>
-        <ul>
+        <ul class="to">
             <li><a href="#">Home</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">Blog</a></li>
@@ -33,15 +33,18 @@
             <h1>Результаты поиска по слову "вёрстка"</h1>
             <section>
                 <h3>Вёрстка сайтов под ключ</h3>
-                <p>Мы создаем сайты за 1 месяц и дарим логотип в подарок <a href="#">Далее</a></p>
+                <p>Мы создаем сайты за 1 месяц и дарим логотип в подарок 
+                <a class="link">Далее</a></p>
             </section>
             <section>
                 <h3>Научись верстать сайты быстро!</h3>
-                <p>Подробный обучающий курс для новичков. Учим за 3 месяца. <a href="#">Далее</a></p>
+                <p>Подробный обучающий курс для новичков. Учим за 3 месяца. 
+                <a class="text">Далее</a></p>
             </section>
             <section>
                 <h3>Отмечаем ровно один год!</h3>
-                <p>Наша школа за этот год обучила вёрстке уже 1000 студентов! <a href="#">Далее</a></p>
+                <p>Наша школа за этот год обучила вёрстке уже 1000 студентов.
+                <a class="text">Далее</a></p>
             </section>
             <hr>
             <h2>Полезная статья:</h2>
