--- a/semantic.html
+++ b/semantic.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <a href="#" class="logo">LOGO</a>
-        <ul class="to">
+        <ul class="todo">
             <li><a href="#">Home</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">Blog</a></li>
