--- a/lesson.html
+++ b/lesson.html
@@ -9,24 +9,23 @@
 <body>
     <h1>Заказы</h1>
     <p>На этой странице выводятся заказы, оплаченные за год:</p>
-<ul>
+    <ul>
     <li>Apple Pensil</li>
-</ul>
-<ul>
     <li>Macbook Pro</li>
-</ul>
-<ul>
     <li>iPad Mini</li>
 </ul>
 <hr>
 <p>Ознакомьтесь условиями:</p>
-<ul>1.<a href="https://cabinet.annblok.ru/courses/1/3">Как оформить заказ</a>  
-</ul>
-<ul>2. <a href="https://cabinet.annblok.ru/courses/1/3">Способы доставки</a>
-</ul>
-<ul>3. <a href="https://cabinet.annblok.ru/courses/1/3">Оплата и доставка</a>
-</ul>
-<p>И помните, что<q>Многие люди терпят неудачу только потому, чтосдаются в двух шагах от успеха </q></p>
-
+<ol>
+    <li>
+    <a href="https://cabinet.annblok.ru/courses/1/3">Как оформить заказ</a>  
+    </li>
+    <li>
+    <a href="https://cabinet.annblok.ru/courses/1/3">Способы доставки</a>
+    </li>
+    <li>
+    <a href="https://cabinet.annblok.ru/courses/1/3">Оплата и доставка</a>
+    </li>
+<p> И помните, что <q> Многие люди терпят неудачу только потому, чтосдаются в двух шагах от успеха </q></p>
 </body>
 </html>
